--- a/assets/css/index.less
+++ b/assets/css/index.less
@@ -38,7 +38,7 @@
 
 .el-main {
   width: 100%;
-  height: 888px;
+  height: auto;
   margin-top: 70px;
   color: #333;
   border-radius: 5px;
@@ -57,14 +57,15 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background: #00defc;
+      background: #fff;
       border-radius: 5px;
       margin-bottom: 3px;
       box-shadow: 2px 2px 5px 1px #ccc;
+      color: #000;
     }
 
     a:hover {
-      color: #fc556d
+      color: #ccc
     }
   }
 
@@ -82,11 +83,25 @@
 
       #mentality,
       #technology,
-      #code {
+      #code,
+      #demonstration {
         margin-bottom: 10px;
+
+        div {
+          text-indent: 28px;
+          margin-top: 5px;
+        }
       }
 
       #code {
+        margin-bottom: 50px;
+        background-color: #292727;
+        color: #dbd9d9;
+        border-radius: 5px;
+        box-shadow: 0 0 10px 2px;
+      }
+
+      #demonstration {
         margin-bottom: 50px;
       }
 
@@ -97,6 +112,12 @@
       h5,
       h6 {
         text-align: center;
+        margin-top: 10px;
+        margin-bottom: 10px;
+      }
+
+      pre {
+        white-space: pre-wrap;
       }
     }
 
@@ -258,4 +279,54 @@
     }
   }
 
+}
+
+
+
+// ===============================================================================
+//演示代码样式
+#css-revelation-light {
+  #demonstration {
+    div {
+
+      h1 {
+        font-family: Arial, Helvetica, sans-serif;
+        position: relative;
+        color: #333;
+        font-size: 80px;
+      }
+
+      h1::after {
+        content: attr(data-spotlight);
+        color: transparent;
+        position: absolute;
+        left: 203.5px;
+        -webkit-clip-path: ellipse(80px 80px at 0% 50%);
+        clip-path: ellipse(80px 80px at 0% 50%);
+        animation: spotlight 5s infinite;
+        background-image: url(https://images.unsplash.com/photo-1547186821-8884d8762443?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80);
+        background-position: center center;
+        background-size: 150%;
+        -webkit-background-clip: text;
+        background-clip: text;
+      }
+
+      @keyframes spotlight {
+        0% {
+          -webkit-clip-path: ellipse(80px 80px at 0% 50%);
+          clip-path: ellipse(80px 80px at 0% 50%);
+        }
+
+        50% {
+          -webkit-clip-path: ellipse(80px 80px at 100% 50%);
+          clip-path: ellipse(80px 80px at 100% 50%);
+        }
+
+        100% {
+          -webkit-clip-path: ellipse(80px 80px at 0% 50%);
+          clip-path: ellipse(80px 80px at 0% 50%);
+        }
+      }
+    }
+  }
 }
