--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -249,6 +249,7 @@
   align-items: center;
 }
 #css-revelation-light #demonstration div h1 {
+  width: auto;
   font-family: Arial, Helvetica, sans-serif;
   color: #333;
   position: relative;
