--- a/assets/css/index.less
+++ b/assets/css/index.less
@@ -295,11 +295,11 @@
       align-items: center;
 
       h1 {
+        width: auto;
         font-family: Arial, Helvetica, sans-serif;
         color: #333;
         position: relative;
         font-size: 80px;
-
       }
 
       h1::after {
