--- a/assets/css/index.less
+++ b/assets/css/index.less
@@ -306,6 +306,7 @@
         content: 'CodingStartUp';
         color: transparent;
         position: absolute;
+        top: 0;
         left: 0;
         -webkit-clip-path: ellipse(80px 80px at 0% 50%);
         clip-path: ellipse(80px 80px at 0% 50%);
