--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -5,14 +5,21 @@
   font-family: 'Microsoft YaHei';
   font-weight: 700;
   list-style: none;
+  animation: 3s linear;
+}
+body {
+  background: #f5f6f7 no-repeat;
 }
 #root {
   width: 1900px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .el-container {
   width: 1010px;
-  margin: 0 auto;
   position: relative;
+  padding: 0 24px 16px;
 }
 .el-header,
 .el-footer {
@@ -37,7 +44,7 @@
   margin-top: 70px;
   color: #333;
   border-radius: 5px;
-  background-color: #E9EEF3;
+  background-color: #fff;
   font-size: 16px;
   padding: 5px;
 }
@@ -108,16 +115,18 @@
 }
 .el-main .el-main-body footer {
   width: 100%;
-  position: absolute;
-  bottom: 0;
   text-align: center;
+}
+.el-main .el-main-body footer p {
+  margin-top: 10px;
+  color: #ccc;
 }
 .el-main #article-list-home header {
   text-align: center;
 }
 .el-main #article-list-home header div {
   position: absolute;
-  right: 10px;
+  right: 35px;
   font-size: 14px;
   color: #8f8d8d;
 }
@@ -130,34 +139,35 @@
   margin-top: 8px;
 }
 .el-aside {
-  background-color: #D3DCE6;
   color: #333;
   text-align: center;
-  position: absolute;
-  top: 100px;
-  left: 50%;
   border-radius: 5px;
   font-size: 16px;
-  box-shadow: 5px 5px 10px 1px #ccc;
 }
 .el-aside::-webkit-scrollbar {
   display: none;
 }
 #aside-left {
-  top: 0px;
-  margin-left: -850px;
+  background-color: transparent;
+  margin-left: -830px;
   padding: 5px;
+  position: absolute;
+  top: 0;
+  left: 50%;
 }
 #aside-left #article-list a {
   display: inline-block;
   text-decoration: none;
+  width: 300px;
   height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 5px;
-  margin-bottom: 3px;
+  margin-bottom: 5px;
+  background-color: #fff;
   color: #000;
+  box-shadow: 1px 1px 5px 1px #ccc;
 }
 #aside-left #article-list a:hover {
   color: #fff;
@@ -169,20 +179,27 @@
 .aside-right {
   margin-left: 520px;
   padding: 5px;
+  background: transparent;
+  position: absolute;
+  top: 100px;
+  left: 50%;
 }
 .aside-right a {
   display: inline-block;
   text-decoration: none;
+  width: 100px;
   height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
+  color: #fff;
   background: #00defc;
   border-radius: 5px;
   margin-bottom: 3px;
+  box-shadow: 1px 1px 5px 1px #ccc;
 }
 .aside-right a:hover {
-  color: #fc556d;
+  color: #93ecc8;
 }
 .aside-right a:last-child {
   margin-bottom: 0;
@@ -240,6 +257,11 @@
 }
 .aside-right .year .years {
   width: 130px;
+}
+#maodian {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 #css-revelation-light #demonstration div {
   display: block;
